FAIT: pagination centrée + footer + cards / A FAIRE: side + coller header + transparence

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -9,30 +9,15 @@
             <!-- Text widget-->
             <aside class="widget widget-text">
                 <div class="textwidget">
-                    <p class="text-center"><img src="assets/images/logo-light-2.png" alt="" width="80px"></p>
+                    <p class="text-center"><%= image_tag('menu-chat-2.jpg', width: "80") %></p>
                     <p class="text-center">See how users experience your website in realtime to see changes.</p>
                 </div>
             </aside>
-            <!-- Recent portfolio widget-->
-            <aside class="widget widget-recent-works">
-                <ul>
-                    <li><a href="#"><img src="assets/images/widgets/1.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="assets/images/widgets/2.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="assets/images/widgets/3.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="assets/images/widgets/4.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="assets/images/widgets/5.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="assets/images/widgets/6.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="assets/images/widgets/7.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="assets/images/widgets/8.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="assets/images/widgets/9.jpg" alt=""></a></li>
-                </ul>
-            </aside>
             <!-- Social Icons-->
             <ul class="social-icons text-center">
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+                <li><a href="https://twitter.com/RealGrumpyCat?lang=fr"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://www.instagram.com/cats/"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/this.is.cats.world/"><i class="fab fa-facebook-f"></i></a></li>
             </ul>
         </div>
     </div>
