FAIT : coller header + side bar avec sign in et profil

--- a/app/assets/stylesheets/components/_cards_item.css
+++ b/app/assets/stylesheets/components/_cards_item.css
@@ -1,5 +1,9 @@
-.shop-grid-item a:hover {
+.shop-item-thumb a:hover {
   background-color: transparent;
+}
+
+.shop-item-hidden a:hover {
+  background-color: rgba(200, 200, 200, 0.8);
 }
 
 .pagination {
