--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,66 +1,5 @@
 <%= render 'items/components/banner' %>
 <%= render 'items/components/cards_item' %>
-
-<!-- Off canvas-->
-<div class="off-canvas-sidebar">
-    <div class="off-canvas-sidebar-wrapper">
-        <div class="off-canvas-header"><a class="off-canvas-close" href="#"><span class="ti-close"></span></a></div>
-        <div class="off-canvas-content">
-            <!-- Text widget-->
-            <aside class="widget widget-text">
-                <div class="textwidget">
-                    <p class="text-center"><%= image_tag('menu-chat-2.jpg', width: "80") %></p>
-                    <p class="text-center">See how users experience your website in realtime to see changes.</p>
-                </div>
-            </aside>
-            <!-- Social Icons-->
-            <ul class="social-icons text-center">
-                <li><a href="https://twitter.com/RealGrumpyCat?lang=fr"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="https://www.instagram.com/cats/"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://www.facebook.com/this.is.cats.world/"><i class="fab fa-facebook-f"></i></a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-<!-- Off canvas end-->
+<%= render 'items/components/sidebar' %>
 
 <!-- To top button--><a class="scroll-top" href="#top"><i class="fas fa-angle-up"></i></a>
-
-
-
-<h1> SCAFFOLD </h1>
-<p id="notice"><%= notice %></p>
-
-<h1>Items</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Price</th>
-      <th>Image url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @items.each do |item| %>
-      <tr>
-        <td><%= item.title %></td>
-        <td><%= item.description %></td>
-        <td><%= item.price %></td>
-        <td><%= item.image_url %></td>
-        <td><%= link_to 'Show', item %></td>
-        <td><%= link_to 'Edit', edit_item_path(item) %></td>
-        <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Item', new_item_path %>
-
-
