--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,12 +24,12 @@
 
   <body>
     <%= render 'shared/preloader' %>
-    <%= render 'shared/header' %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+
 
     <!-- Wrapper-->
     <div class="wrapper">
+    <%= render 'shared/header' %>
+    <%= render 'shared/error'  %>
     <%= yield %>
     <%= render 'shared/footer' %>
     </div>
