--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
 <header class="header header-transparent">
   <div class="container-fluid">
     <!-- Brand-->
-    <div class="inner-header"><a class="inner-brand" href="index.html">KittyWorld</a></div>
+    <div class="inner-header"><a class="inner-brand" href="<%= root_path %>">KittyWorld</a></div>
     <!-- Navigation-->
     <div class="inner-navigation collapse">
       <div class="inner-nav">
