--- a/app/views/items/components/_sidebar.html.erb
+++ b/app/views/items/components/_sidebar.html.erb
@@ -6,20 +6,20 @@
         <!-- Text widget-->
         <aside class="widget widget-text">
           <div class="textwidget">
-            <p class="text-center"><%= image_tag('menu-chat-2.jpg', width: "80") %></p>
+            <p class="text-center"  ><%= image_tag('menu-chat-2.jpg', class: "avatar") %></p>
              <% if user_signed_in? %>
                 <p class="text-center">Hi there ! <br>
                  Check your profile & settings here</p>
 
                  <div class="list-group">
-                    <a href="<%= new_user_session_path %>" class="list-group-item list-group-item-action list-group-item-light">My orders</a>
-                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">My settings</a>
-                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Log out</a>
+                    <%= link_to "My orders", root_path, class:  "list-group-item list-group-item-action list-group-item-light"%>
+                    <%= link_to "My settings", edit_user_registration_path, class:  "list-group-item list-group-item-action list-group-item-light"%>
+                    <%= link_to "Log out", destroy_user_session_path, method: :delete, class:  "list-group-item list-group-item-action list-group-item-light"%>
                   </div>
                <% else %>
                  <div class="list-group">
-                    <a href="#" class="list-group-item list-group-item-action list-group-item-light">Log in</a>
-                    <a href="<%= new_user_session_path %>" class="list-group-item list-group-item-action list-group-item-light">Sign in</a>
+                    <a href="<%= new_user_session_path %>" class="list-group-item list-group-item-action list-group-item-light">Log in</a>
+                    <a href="<%= new_user_registration_path %>" class="list-group-item list-group-item-action list-group-item-light">Sign in</a>
                   </div>
                 <% end %>
               </div>
