flexible carts working

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,7 +1,7 @@
 <h1>Carts#show</h1>
 <p>Find me in app/views/carts/show.html.erb</p>
 
-<% if current_user.cart.items.size == 0 %>
+<% if @cart.items.size == 0 %>
 
   <p>
     There are no items in your cart
@@ -15,3 +15,6 @@
 
 <%= link_to "Return to shop", items_path %>
 <%= link_to "signout", destroy_user_session_path, method: :delete %>
+
+<%= link_to "add item 1", add_item_path(id: 1), :method=> :post %>
+<%= link_to "add item 2", add_item_path(2) %>
